fix: add cards overflow protection

--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -8,4 +8,5 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
